.. _changelog:

================
 Change history
================

.. _version-4.0.3:

4.0.3
=====
:release-date: TBA
:release-by: Ask Solem

- MongoDB: Fixed problem with using readPreference option at pymongo 3.x.

    Contributed by **Mikhail Elovskikh**.

.. _version-4.0.2:

4.0.2
=====
:release-date: 2016-12-15 03:31 P.M PST
:release-by: Ask Solem

- Now depends on :mod:`amqp` 2.1.4

    This new version takes advantage of TCP Keepalive settings on Linux,
    making it better at detecting closed connections, also in failover
    conditions.

- Redis: Priority was reversed so, e.g. priority 0 became priority 9.

.. _version-4.0.1:

4.0.1
=====
:release-date: 2016-12-07 06:00 P.M PST
:release-by: Ask Solem

- Now depends on :mod:`amqp` 2.1.3

    This new version takes advantage of the new ``TCP_USER_TIMEOUT`` socket option
    on Linux.

- Producer: Fixed performance degradation when default exchange specified
  (Issue #651).

- QPid: Switch to using getattr in qpid.Transport.__del__ (Issue #658)

    Contributed by **Patrick Creech**.

- QPid: Now uses monotonic time for timeouts.

- MongoDB: Fixed compatibility with Python 3 (Issue #661).

- Consumer: ``__exit__`` now skips cancelling consumer if connection-related
  error raised (Issue #670).

- MongoDB: Removes use of natural sort (Issue #638).

    Contributed by **Anton Chaporgin**.

- Fixed wrong keyword argument ``channel`` error (Issue #652).

    Contributed by **Toomore Chiang**.

- Safe argument to ``urllib.quote`` must be bytes on Python 2.x (Issue #645).

- Documentation improvments by:

    - **Carlos Edo**
    - **Cemre Mengu**

.. _version-4.0:

4.0
===
:release-date: 2016-10-28 16:45 P.M UTC
:release-by: Ask Solem

- Now depends on :mod:`amqp` 2.0.

    The new py-amqp version have been refactored for better performance,
    using modern Python socket conventions, and API consistency.

- No longer depends on :mod:`anyjson`.
